package.yml update with doc from github

--- a/package.yml
+++ b/package.yml
@@ -3,5 +3,5 @@ author: panaghia
 category: Forms
 tags: [geocoding, autocomplete, input, form]
 demo: http://geosuggester.panaghia.it/demo/
-docs: http://geosuggester.panaghia.it/doc/
+docs: https://github.com/panaghia/GeoSuggester/wiki/Documentation
 current: 0.5
